<resources>
    <string name="app_name">ShareRing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_val">Password Validation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="nicmane">nicname</string>


    <string name="gallery">Gallery</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_write">WriteActivity</string>

    <string name="password_wrong"> 비밀번호가 일치하지 않습니다.</string>
    <string name="password_below">비밀번호가 8자리 이하입니다.</string>

    <!-- key -->
    <string name="key_days">days</string>
    <string name="key_email">email</string>
    <string name="key_nicname">nicname</string>
    <string name="key_id">id</string>
    <string name="key_icon">icon</string>
    <string name="key_cover">cover</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
</resources>
